restructuring file format, adding index profiles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <h1>WOW... You did it..</h1>
+
+    <div class="title">Here's the game, you know it im sure..</div>
+        <div class="main_container">
+            <div>Your Rocks</div>
+            <div>Your Papers</div>
+            <div> Your Scissor</div>
+        </div>
 </body>
 <script src="js/main.js"></script>
 </html>
